[package]
name = "pi_network_vanity"
version = "0.0.1"
authors = ["Rob Durst <rsdurst@colby.edu> , Arpad Palinkas <arpad.palinkas@gmail.com>"]
description = "A simple CLI for generating Pi Network vanity addresses"
readme = "README.md"
keywords = ["pinetwork", "vanity", "address"]
categories = ["blockchain", "cli", "tool"]
repository = "https://github.com/palinko91/pi-network-vanity-address-generator"
license-file = "LICENSE"

[dependencies]
rand = "0.7.3"
rand_core = "0.5.1"
ed25519-dalek = "1.0.0-pre.1"
base32 = "0.4.0"
crc16 = "0.4.0"
bytes = "0.5.4"
byteorder = "1.2.1"
clap = "2.26.0"
regex = "1"
fstrings = "0.2.3"
bip39 = "1.0.1"
stellar-base = "0.5.0"
sodiumoxide = "=0.2.6"
libsodium-sys = "=0.2.6"
slip10_ed25519 = "0.1.3"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.0"

[[bench]]
name = "benchmark"
harness = false
